--- a/src/CLI/CommandsConsole/CommandsConsole.csproj
+++ b/src/CLI/CommandsConsole/CommandsConsole.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\CommandConsole\CommandConsole.csproj" />
+  </ItemGroup>
+
 </Project>
