--- a/addons/FileAction/FileAction/FileAction.csproj
+++ b/addons/FileAction/FileAction/FileAction.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="D:\Project\CommandConsol\CommandConsol\CommandConsol.csproj" />
+    <ProjectReference Include="..\..\..\src\Core\CommandConsole\CommandConsole.csproj" />
   </ItemGroup>
 
 </Project>
